--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -58,10 +58,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Unity - Builder
+    - name: solution
   # You may pin to the exact commit or the version.
   # uses: game-ci/unity-builder@dd427466ce741f0f68264e5962f034214d814904
-      uses: game-ci/unity-builder@v4.2.3
+      run: |
+        echo 'dotnet new sln --name mysolution'
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
