--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -58,11 +58,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: solution
-  # You may pin to the exact commit or the version.
-  # uses: game-ci/unity-builder@dd427466ce741f0f68264e5962f034214d814904
-      run: |
-        dotnet new sln --name mysolution
+#    - name: solution
+#  # You may pin to the exact commit or the version.
+#  # uses: game-ci/unity-builder@dd427466ce741f0f68264e5962f034214d814904
+#      run: |
+#        dotnet new sln --name mysolution
+    - name: Setup Dotnet
+      uses: actions/setup-dotnet@v1
+      with: 
+        dotnet-version: '6.0.x'
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
