--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         include:
         - language: csharp
-#          build-mode: autobuild
+          build-mode: autobuild
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -80,15 +80,7 @@ jobs:
 #    - name: Autobuild
 #      uses: github/codeql-action/autobuild@v3
           # Build
-    - name: Build project
-      uses: game-ci/unity-builder@v4
-      env:
-         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-      with:
-         targetPlatform: StandaloneWindows64
-         allowDirtyBuild: true        
+           
     # If the analyze step fails for one of the languages you are analyzing with
     # "We were unable to automatically build your code", modify the matrix above
     # to set the build mode to "manual" for that language. Then modify this step
@@ -103,7 +95,16 @@ jobs:
         echo '  make bootstrap'
         echo '  make release'
         exit 1
-
+    - name: Build project
+      uses: game-ci/unity-builder@v4
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+      with:
+        targetPlatform: StandaloneWindows64
+        allowDirtyBuild: true
+        
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
