--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         include:
         - language: csharp
-          build-mode: autobuild
+#          build-mode: autobuild
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -87,14 +87,14 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-    - if: matrix.build-mode == 'manual'
-      run: |
-        echo 'If you are using a "manual" build mode for one or more of the' \
-          'languages you are analyzing, replace this with the commands to build' \
-          'your code, for example:'
-        echo '  make bootstrap'
-        echo '  make release'
-        exit 1
+#    - if: matrix.build-mode == 'manual'
+#      run: |
+#        echo 'If you are using a "manual" build mode for one or more of the' \
+#          'languages you are analyzing, replace this with the commands to build' \
+#          'your code, for example:'
+#        echo '  make bootstrap'
+#        echo '  make release'
+#        exit 1
     - name: Build project
       uses: game-ci/unity-builder@v4
       env:
