--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,8 +42,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - language: csharp,javascript-typescript
-#          build-mode: autobuild
+        - language: csharp
+          build-mode: autobuild
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -87,24 +87,25 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-#    - if: matrix.build-mode == 'manual'
-#      run: |
-#        echo 'If you are using a "manual" build mode for one or more of the' \
-#          'languages you are analyzing, replace this with the commands to build' \
-#          'your code, for example:'
-#        echo '  make bootstrap'
-#        echo '  make release'
-#        exit 1
-    - name: Build project
-      uses: game-ci/unity-builder@v4
-      env:
-        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-      with:
-        targetPlatform: WebGL
-        allowDirtyBuild: true
-        
+    - if: matrix.build-mode == 'manual'
+      run: |
+        echo 'If you are using a "manual" build mode for one or more of the' \
+          'languages you are analyzing, replace this with the commands to build' \
+          'your code, for example:'
+        echo '  make bootstrap'
+        echo '  make release'
+        Unity -quit -batchmode -nographics -buildTarget EmbeddedLinux -executeMethod Builder.Build -projectPath <//>
+        exit 1
+#    - name: Build project
+#      uses: game-ci/unity-builder@v4
+#      env:
+#        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#      with:
+#        targetPlatform: WebGL
+#        allowDirtyBuild: true
+#        
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
