--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -61,10 +61,10 @@ jobs:
 #  # uses: game-ci/unity-builder@dd427466ce741f0f68264e5962f034214d814904
 #      run: |
 #        dotnet new sln --name mysolution
-    - name: Setup Dotnet
-      uses: actions/setup-dotnet@v1
-      with: 
-        dotnet-version: '6.0.x'
+#    - name: Setup Dotnet
+#      uses: actions/setup-dotnet@v1
+#      with: 
+#        dotnet-version: '6.0.x'
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
@@ -94,7 +94,7 @@ jobs:
           'your code, for example:'
         echo '  make bootstrap'
         echo '  make release'
-        Unity -quit -batchmode -nographics -buildTarget EmbeddedLinux -executeMethod Builder.Build -projectPath <//>
+        Unity -quit -batchmode -nographics -buildTarget EmbeddedLinux -executeMethod Builder.Build -projectPath <>
         exit 1
 #    - name: Build project
 #      uses: game-ci/unity-builder@v4
