--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,7 +56,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-#    - name: solution
+    - name: install unity
+      run: |
+        sudo apt update
+        sudo apt upgrade
+        sudo apt install gnome-terminal libgconf-2-4 libglu1-mesa
+        wget https://public-cdn.cloud.unity3d.com/hub/prod/UnityHub.AppImage -O UnityHub.AppImage
+        chmod +x UnityHub.AppImage
+        ./UnityHub.AppImage
+      
+      
+      
+      
+      
+      #    - name: solution
 #  # You may pin to the exact commit or the version.
 #  # uses: game-ci/unity-builder@dd427466ce741f0f68264e5962f034214d814904
 #      run: |
@@ -94,7 +107,6 @@ jobs:
           'your code, for example:'
         echo '  make bootstrap'
         echo '  make release'
-        sudo apt install untiy
         ls
         Unity -quit -batchmode -nographics -buildTarget EmbeddedLinux -executeMethod Builder.PerformBuild -projectPath ..
         exit 1
