--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         include:
         - language: csharp
-          build-mode: manual
+          build-mode: autobuild
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -55,19 +55,19 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: install unity
-      run: |
-        sudo apt update
-        sudo apt upgrade
-        sudo apt install fuse
-        sudo apt install gnome-terminal libgconf-2-4 libglu1-mesa
-        wget https://public-cdn.cloud.unity3d.com/hub/prod/UnityHub.AppImage -O UnityHub.AppImage
-        wget https://download.unity3d.com/download_unity/b9e6e7e9fa2d/UnitySetup-2022.3.6f1 
-        chmod +x UnitySetup-2022.3.6f1
-        ./UnitySetup-2022.3.6f1
-        ls
-        chmod +x UnityHub.AppImage
+#
+#    - name: install unity
+#      run: |
+#        sudo apt update
+#        sudo apt upgrade
+#        sudo apt install fuse
+#        sudo apt install gnome-terminal libgconf-2-4 libglu1-mesa
+#        wget https://public-cdn.cloud.unity3d.com/hub/prod/UnityHub.AppImage -O UnityHub.AppImage
+#        wget https://download.unity3d.com/download_unity/b9e6e7e9fa2d/UnitySetup-2022.3.6f1 
+#        chmod +x UnitySetup-2022.3.6f1
+#        ./UnitySetup-2022.3.6f1
+#        ls
+#        chmod +x UnityHub.AppImage
 #        ./UnityHub.AppImage
       
       
@@ -89,14 +89,18 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
+          
+    - name: database
+      run: |
+        codeql database create test
+      # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
 
         # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
-#    - name: Autobuild
-#      uses: github/codeql-action/autobuild@v3
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3
           # Build
            
     # If the analyze step fails for one of the languages you are analyzing with
