--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,6 +32,11 @@ jobs:
         with:
           version: '2022.3.6f1' # Specify your Unity version
 
+
+      - name: Activate Unity License
+        uses: game-ci/unity-activate@v2
+        with:
+          unityLicense: ${{ secrets.UNITY_LICENSE }}
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
