--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,17 +26,18 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '6.x'
-
-      - name: Setup Unity
-        uses: game-ci/unity-builder@v2
-        with:
-          version: '2022.3.6f1' # Specify your Unity version
-
-
       - name: Activate Unity License
         uses: game-ci/unity-activate@v2
         with:
           unityLicense: ${{ secrets.UNITY_LICENSE }}
+      - name: Setup Unity
+        uses: game-ci/unity-builder@v2
+        with:
+          unityLicense: ${{ secrets.UNITY_LICENSE }}
+          version: '2022.3.6f1' # Specify your Unity version
+
+
+     
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
