--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,16 +26,26 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '6.x'
-      - name: Activate Unity License
-        uses: game-ci/unity-activate@v2
-        with:
-          unityLicense: ${{ secrets.UNITY_LICENSE }}
+#      - name: Activate Unity License
+#        uses: game-ci/unity-activate@v2
+#        with:
+#          unityLicense: ${{ secrets.UNITY_LICENSE }}
       - name: Setup Unity
         uses: game-ci/unity-builder@v2
+        env:
+              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           unityLicense: ${{ secrets.UNITY_LICENSE }}
           version: '2022.3.6f1' # Specify your Unity version
-
+#  - uses: game-ci/unity-builder@v4
+#    env:
+#      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#      UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#      UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#    with:
+#      targetPlatform: WebGL
 
      
       - name: Initialize CodeQL
