--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,10 +36,10 @@ jobs:
         with:
           version: '2022.3.6f1' # Specify your Unity version
           
-      - name: Activate Unity License
-        uses: game-ci/unity-activate@v2
-        with:
-          unityLicense: ${{ secrets.UNITY_LICENSE }}
+#      - name: Activate Unity License
+#        uses: game-ci/unity-activate@v2
+#        with:
+#          unityLicense: ${{ secrets.UNITY_LICENSE }}
 #  - uses: game-ci/unity-builder@v4
 #    env:
 #      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
