--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,16 +27,16 @@ jobs:
         with:
           dotnet-version: '6.x'
 
-      - name: Setup Unity Builder
-        uses: game-ci/unity-builder@v2
+      - name: Setup Unity
+        uses: game-ci/unity-builder@v4
+        env:
+              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          version: '2021.1.14f1' # Specify your Unity version
-
-      - name: Activate Unity License
-        uses: game-ci/unity-activate@v2
-        with:
-          unityLicense: ${{ secrets.UNITY_LICENSE }}
-
+          version: '2022.3.6f1' # Specify your Unity version
+   
+     
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
@@ -44,7 +44,7 @@ jobs:
 
       - name: Build project
         run: |
-          /opt/unity/Editor/Unity -quit -batchmode -nographics -logFile /dev/stdout -projectPath . -executeMethod BuildScript.Build
+          /opt/unity/Editor/Unity -quit -batchmode --project-path . --build-target StandaloneWindows64
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
