--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           version: '2022.3.6f1' # Specify your Unity version
           targetPlatform: WebGL
+          allowDirtyBuild: true
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
         with:
