--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,6 +13,9 @@ jobs:
     name: Analyze
     runs-on: ubuntu-latest
 
+    permissions:
+     contents: read
+     security-events: write
     strategy:
       fail-fast: false
       matrix:
@@ -21,7 +24,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+        with:
+         submodules: true
+         fetch-depth: 0
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
