--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,14 +39,14 @@ jobs:
 #         sudo rm -rf /usr/local/share/boost
 #         sudo apt-get clean
 #        
-#      - name: Setup Unity
-#        uses: game-ci/unity-builder@v4
-#        env:
-#              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-#              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-#        with:
-#          version: '2022.3.6f1' # Specify your Unity version
+      - name: Setup Unity
+        uses: game-ci/unity-builder@v4
+        env:
+              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          version: '2022.3.6f1' # Specify your Unity version
 #   
      
       - name: Initialize CodeQL
@@ -61,17 +61,22 @@ jobs:
 #        run: |
 #          /Applications/Unity/Hub/Editor/2022.3.6f1/Unity.app/Contents/Linux/Unity -quit -batchmode --project-path . --build-target StandaloneWindows64
 
+#
+#      - name: Setup Unity
+#        uses: game-ci/unity-builder@v4
+#        env:
+#          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#        with:
+#          version: '2022.3.6f1' # Specify your Unity version
+#          targetPlatform: WebGL
+#          allowDirtyBuild: true
+      - name: buildCMD
+        run: |
+          ls
+         /opt/unity/Editor/Unity -quit -batchmode -projectPath ~/UnityProjects/MyProject -executeMethod Builder.PerformBuild
 
-      - name: Setup Unity
-        uses: game-ci/unity-builder@v4
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          version: '2022.3.6f1' # Specify your Unity version
-          targetPlatform: WebGL
-          allowDirtyBuild: true
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
         with:
